packages/ai-chat-components/src/components/workspace-shell/src/workspace-shell-header.scss
/*
 *  Copyright IBM Corp. 2025
 *
 *  This source code is licensed under the Apache-2.0 license found in the
 *  LICENSE file in the root directory of this source tree.
 *
 *  @license
 */

$css--plex: true !default;

@use "@carbon/layout";
@use "@carbon/styles/scss/reset";
@use "@carbon/styles/scss/theme";
@use "@carbon/styles/scss/type";
@use "../../../globals/scss/vars" as *;
@use "@carbon/styles/scss/utilities/convert" as *;
@use "@carbon/styles/scss/breakpoint" as *;

:host(#{$prefix}-workspace-shell-header) {
  overflow: auto;
  padding: rem(24px) rem(32px);
  border-block-end: solid rem(1px) theme.$chat-bubble-border;
  color: theme.$text-secondary;

  @include type.type-style("body-01");

  @include breakpoint-down("md") {
    gap: 16px;
    grid-auto-flow: row;
  }

  ::marker {
    content: "";
  }

  ::-webkit-details-marker {
    display: none;
  }
}
.#{$prefix}-workspace-shell {
  &__header {
    &-content {
      display: grid;
      gap: rem(16px);

      &:open .#{$prefix}-workspace-shell__header-chevron {
        transform: rotate(180deg);
      }
    }

    &-title {
      color: theme.$text-primary;
      margin-block-end: rem(-14px);
      @include type.type-style("heading-04");
    }

    &-sub-title {
      color: theme.$text-secondary;
      @include type.type-style("label-01");
    }

    &-summary {
      display: flex;
      align-items: center;
      justify-content: space-between;
    }
  }
}

